# Xutrix-ChessEngine

./: .gitignore  LICENSE  Open.bat  Possible ui(made by 112project.py  README.md  SetUpEnv.bat  TestAfter.py  TestKing.py  TestMovesGenerator.py  TestMovesGeneratorbefore.py  XustrixEngine.py  debug Zobrist.py  doMovetest.py  engine.py  generateAllPseudoMoves.pyx  isSquareAttacked.c  isSquareAttacked.cp312-win_amd64.pyd  isSquareAttacked.pyd  isSquareAttacked.pyx  log.md  movegen.c  movegen.html  movegen.pyd  movegen.pyx  opening.py  pesto.py  profileEngine.py  profile_stats.prof  setup.py  testWithStockfish.py
c_engine/: CMakeLists.txt  README.md  build.ps1  verify.ps1
c_engine/data/fixtures/: mini.pgn
c_engine/src/: board.c  eval.c  main.c  movegen.c  nnue.c  nnue.h  search.c  xutrix.h
c_engine/tools/: add_gcc_to_user_path.ps1  download_chesscom_pgn.py  extract_positions.py  install_stockfish.ps1  label_with_stockfish.py  requirements-training.txt  write_smoke_nnue.py
piecePosition/: b_table_adjusted.json  k_table.json  n_table_adjusted.json  p_table_adjusted.json  q_table.json  r_table.json
